none-type error fixed

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,7 +10,9 @@ faster-whisper
 chromadb
 sarvamai
 langchain
+langchain-core
 langchain-community
 langchain-google-genai
 langchain-groq
 langgraph
+PyYAML
